API: Documentação criação usuario
